k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-api-db
  template:
    metadata:
      labels:
        app: flask-api-db
    spec:
      containers:
        - name: flask-api-db
          image: postgres
          ports:
            - containerPort: 5432
