k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30001
  selector:
    app: flask-api
