k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: flask-api-db
