k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-access
spec:
  podSelector:
    matchLabels:
      app: flask-api-db
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: flask-api
      ports:
        - protocol: TCP
          port: 5432
